// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button base 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    default
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    red
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    green
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    yellow
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    primary
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __second __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    second
  </button>
</div>
`;

exports[`button block 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __block __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    block
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __large __block __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    block
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __large __block __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    block
  </button>
</div>
`;

exports[`button circle 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __large __circle __outline __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    丑
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __circle __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    亥
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __small __circle __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    卯
  </button>
</div>
`;

exports[`button disabled 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    default
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    red
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    green
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    yellow
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    primary
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __second __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    second
  </button>
</div>
`;

exports[`button icon 1`] = `
<div>
  <div
    className="mb-16"
  >
    纯图标
  </div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __icon"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-label="tag"
      className="anticon anticon-tag"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="tag"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M938 458.8l-29.6-312.6c-1.5-16.2-14.4-29-30.6-30.6L565.2 86h-.4c-3.2 0-5.7 1-7.6 2.9L88.9 557.2a9.96 9.96 0 000 14.1l363.8 363.8c1.9 1.9 4.4 2.9 7.1 2.9s5.2-1 7.1-2.9l468.3-468.3c2-2.1 3-5 2.8-8zM459.7 834.7L189.3 564.3 589 164.6 836 188l23.4 247-399.7 399.7zM680 256c-48.5 0-88 39.5-88 88s39.5 88 88 88 88-39.5 88-88-39.5-88-88-88zm0 120c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"
        />
      </svg>
    </span>
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __icon"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-label="setting"
      className="anticon anticon-setting"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="setting"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
        />
      </svg>
    </span>
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __icon __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-label="question-circle"
      className="anticon anticon-question-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="question-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
        />
      </svg>
    </span>
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __icon"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-label="search"
      className="anticon anticon-search"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="search"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
        />
      </svg>
    </span>
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __icon"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-label="bell"
      className="anticon anticon-bell"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="bell"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M816 768h-24V428c0-141.1-104.3-257.7-240-277.1V112c0-22.1-17.9-40-40-40s-40 17.9-40 40v38.9c-135.7 19.4-240 136-240 277.1v340h-24c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h216c0 61.8 50.2 112 112 112s112-50.2 112-112h216c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM512 888c-26.5 0-48-21.5-48-48h96c0 26.5-21.5 48-48 48zM304 768V428c0-55.6 21.6-107.8 60.9-147.1S456.4 220 512 220c55.6 0 107.8 21.6 147.1 60.9S720 372.4 720 428v340H304z"
        />
      </svg>
    </span>
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __icon"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    李
  </button>
  <div
    className="mt-16"
  >
    <button
      className="m78 m78-init m78-btn m78-effect __md __green __small __icon"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="setting"
        className="anticon anticon-setting"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="setting"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
          />
        </svg>
      </span>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __icon"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="setting"
        className="anticon anticon-setting"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="setting"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
          />
        </svg>
      </span>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __red __large __icon"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="setting"
        className="anticon anticon-setting"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="setting"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    className="mt-16"
  >
    <div
      className="mb-16"
    >
      文字图标混排
    </div>
    <button
      className="m78 m78-init m78-btn m78-effect __md"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="tag"
        className="anticon anticon-tag"
        role="img"
        style={
          Object {
            "marginRight": 4,
          }
        }
      >
        <svg
          aria-hidden="true"
          data-icon="tag"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M938 458.8l-29.6-312.6c-1.5-16.2-14.4-29-30.6-30.6L565.2 86h-.4c-3.2 0-5.7 1-7.6 2.9L88.9 557.2a9.96 9.96 0 000 14.1l363.8 363.8c1.9 1.9 4.4 2.9 7.1 2.9s5.2-1 7.1-2.9l468.3-468.3c2-2.1 3-5 2.8-8zM459.7 834.7L189.3 564.3 589 164.6 836 188l23.4 247-399.7 399.7zM680 256c-48.5 0-88 39.5-88 88s39.5 88 88 88 88-39.5 88-88-39.5-88-88-88zm0 120c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"
          />
        </svg>
      </span>
      按钮
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __red __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="setting"
        className="anticon anticon-setting"
        role="img"
        style={
          Object {
            "marginRight": 4,
          }
        }
      >
        <svg
          aria-hidden="true"
          data-icon="setting"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
          />
        </svg>
      </span>
      按钮
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __green __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="question-circle"
        className="anticon anticon-question-circle"
        role="img"
        style={
          Object {
            "marginRight": 4,
          }
        }
      >
        <svg
          aria-hidden="true"
          data-icon="question-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
          />
        </svg>
      </span>
      按钮
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="bell"
        className="anticon anticon-bell"
        role="img"
        style={
          Object {
            "marginRight": 4,
          }
        }
      >
        <svg
          aria-hidden="true"
          data-icon="bell"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M816 768h-24V428c0-141.1-104.3-257.7-240-277.1V112c0-22.1-17.9-40-40-40s-40 17.9-40 40v38.9c-135.7 19.4-240 136-240 277.1v340h-24c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h216c0 61.8 50.2 112 112 112s112-50.2 112-112h216c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM512 888c-26.5 0-48-21.5-48-48h96c0 26.5-21.5 48-48 48zM304 768V428c0-55.6 21.6-107.8 60.9-147.1S456.4 220 512 220c55.6 0 107.8 21.6 147.1 60.9S720 372.4 720 428v340H304z"
          />
        </svg>
      </span>
      按钮
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __orange __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="bulb"
        className="anticon anticon-bulb"
        role="img"
        style={
          Object {
            "marginRight": 4,
          }
        }
      >
        <svg
          aria-hidden="true"
          data-icon="bulb"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
          />
        </svg>
      </span>
      按钮
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="bell"
        className="anticon anticon-bell"
        role="img"
        style={
          Object {
            "marginRight": 4,
          }
        }
      >
        <svg
          aria-hidden="true"
          data-icon="bell"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M816 768h-24V428c0-141.1-104.3-257.7-240-277.1V112c0-22.1-17.9-40-40-40s-40 17.9-40 40v38.9c-135.7 19.4-240 136-240 277.1v340h-24c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h216c0 61.8 50.2 112 112 112s112-50.2 112-112h216c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM512 888c-26.5 0-48-21.5-48-48h96c0 26.5-21.5 48-48 48zM304 768V428c0-55.6 21.6-107.8 60.9-147.1S456.4 220 512 220c55.6 0 107.8 21.6 147.1 60.9S720 372.4 720 428v340H304z"
          />
        </svg>
      </span>
      文本
      <span
        aria-label="bell"
        className="anticon anticon-bell"
        role="img"
        style={
          Object {
            "marginLeft": 4,
            "marginRight": 4,
          }
        }
      >
        <svg
          aria-hidden="true"
          data-icon="bell"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M816 768h-24V428c0-141.1-104.3-257.7-240-277.1V112c0-22.1-17.9-40-40-40s-40 17.9-40 40v38.9c-135.7 19.4-240 136-240 277.1v340h-24c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h216c0 61.8 50.2 112 112 112s112-50.2 112-112h216c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM512 888c-26.5 0-48-21.5-48-48h96c0 26.5-21.5 48-48 48zM304 768V428c0-55.6 21.6-107.8 60.9-147.1S456.4 220 512 220c55.6 0 107.8 21.6 147.1 60.9S720 372.4 720 428v340H304z"
          />
        </svg>
      </span>
      文本
      <span
        aria-label="setting"
        className="anticon anticon-setting"
        role="img"
        style={
          Object {
            "marginLeft": 4,
          }
        }
      >
        <svg
          aria-hidden="true"
          data-icon="setting"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`button link 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __text"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    link
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __text"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    link
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __text __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    link
  </button>
  <a
    className="m78 m78-init m78-btn m78-effect __md __primary __text"
    disabled={false}
    href="https://www.google.com"
    onClick={[Function]}
  >
    link↗
  </a>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __text"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    link
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __text"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    primary
  </button>
</div>
`;

exports[`button loading 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __second __large __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <div
      className="m78 m78-spin __small __full"
      style={
        Object {
          "__progress": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "visibility": "hidden",
        }
      }
    >
      <div
        className="m78-spin_inner"
        style={
          Object {
            "top": undefined,
          }
        }
      >
        <svg
          className="m78-spin-svg m78-spin_unit"
          fill="transparent"
          height={200}
          viewBox="0 0 200 200"
          width={200}
        >
          <circle
            className="m78-spin-svg_bg"
            cx={100}
            cy={100}
            r={70}
            strokeWidth={60}
          />
          <circle
            cx={100}
            cy={100}
            r={70}
            stroke="url(#Gradient1)"
            strokeDasharray="628.3185307179587 628.3185307179587"
            strokeLinecap="round"
            strokeWidth={60}
          >
            <animate
              attributeName="stroke-dashoffset"
              dur="5s"
              repeatCount="indefinite"
              values="628.3185307179587;0;628.3185307179587"
            />
          </circle>
          <defs>
            <linearGradient
              id="Gradient1"
            >
              <stop
                className="m78-spin-svg_stop1"
                offset="0%"
              />
              <stop
                className="m78-spin-svg_stop2"
                offset="100%"
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
    </div>
    click
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <div
      className="m78 m78-spin __small __full"
      style={
        Object {
          "__progress": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "visibility": "hidden",
        }
      }
    >
      <div
        className="m78-spin_inner"
        style={
          Object {
            "top": undefined,
          }
        }
      >
        <svg
          className="m78-spin-svg m78-spin_unit"
          fill="transparent"
          height={200}
          viewBox="0 0 200 200"
          width={200}
        >
          <circle
            className="m78-spin-svg_bg"
            cx={100}
            cy={100}
            r={70}
            strokeWidth={60}
          />
          <circle
            cx={100}
            cy={100}
            r={70}
            stroke="url(#Gradient1)"
            strokeDasharray="628.3185307179587 628.3185307179587"
            strokeLinecap="round"
            strokeWidth={60}
          >
            <animate
              attributeName="stroke-dashoffset"
              dur="5s"
              repeatCount="indefinite"
              values="628.3185307179587;0;628.3185307179587"
            />
          </circle>
          <defs>
            <linearGradient
              id="Gradient1"
            >
              <stop
                className="m78-spin-svg_stop1"
                offset="0%"
              />
              <stop
                className="m78-spin-svg_stop2"
                offset="100%"
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
    </div>
    click
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __small __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <div
      className="m78 m78-spin __small __full"
      style={
        Object {
          "__progress": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "visibility": "hidden",
        }
      }
    >
      <div
        className="m78-spin_inner"
        style={
          Object {
            "top": undefined,
          }
        }
      >
        <svg
          className="m78-spin-svg m78-spin_unit"
          fill="transparent"
          height={200}
          viewBox="0 0 200 200"
          width={200}
        >
          <circle
            className="m78-spin-svg_bg"
            cx={100}
            cy={100}
            r={70}
            strokeWidth={60}
          />
          <circle
            cx={100}
            cy={100}
            r={70}
            stroke="url(#Gradient1)"
            strokeDasharray="628.3185307179587 628.3185307179587"
            strokeLinecap="round"
            strokeWidth={60}
          >
            <animate
              attributeName="stroke-dashoffset"
              dur="5s"
              repeatCount="indefinite"
              values="628.3185307179587;0;628.3185307179587"
            />
          </circle>
          <defs>
            <linearGradient
              id="Gradient1"
            >
              <stop
                className="m78-spin-svg_stop1"
                offset="0%"
              />
              <stop
                className="m78-spin-svg_stop2"
                offset="100%"
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
    </div>
    click
  </button>
  <div
    className="mt-8"
  >
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __large __circle __light __disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <div
        className="m78 m78-spin __small __full"
        style={
          Object {
            "__progress": 0,
            "opacity": 0,
            "pointerEvents": "none",
            "visibility": "hidden",
          }
        }
      >
        <div
          className="m78-spin_inner"
          style={
            Object {
              "top": undefined,
            }
          }
        >
          <svg
            className="m78-spin-svg m78-spin_unit"
            fill="transparent"
            height={200}
            viewBox="0 0 200 200"
            width={200}
          >
            <circle
              className="m78-spin-svg_bg"
              cx={100}
              cy={100}
              r={70}
              strokeWidth={60}
            />
            <circle
              cx={100}
              cy={100}
              r={70}
              stroke="url(#Gradient1)"
              strokeDasharray="628.3185307179587 628.3185307179587"
              strokeLinecap="round"
              strokeWidth={60}
            >
              <animate
                attributeName="stroke-dashoffset"
                dur="5s"
                repeatCount="indefinite"
                values="628.3185307179587;0;628.3185307179587"
              />
            </circle>
            <defs>
              <linearGradient
                id="Gradient1"
              >
                <stop
                  className="m78-spin-svg_stop1"
                  offset="0%"
                />
                <stop
                  className="m78-spin-svg_stop2"
                  offset="100%"
                />
              </linearGradient>
            </defs>
          </svg>
        </div>
      </div>
      申
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __red __circle __light __disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <div
        className="m78 m78-spin __small __full"
        style={
          Object {
            "__progress": 0,
            "opacity": 0,
            "pointerEvents": "none",
            "visibility": "hidden",
          }
        }
      >
        <div
          className="m78-spin_inner"
          style={
            Object {
              "top": undefined,
            }
          }
        >
          <svg
            className="m78-spin-svg m78-spin_unit"
            fill="transparent"
            height={200}
            viewBox="0 0 200 200"
            width={200}
          >
            <circle
              className="m78-spin-svg_bg"
              cx={100}
              cy={100}
              r={70}
              strokeWidth={60}
            />
            <circle
              cx={100}
              cy={100}
              r={70}
              stroke="url(#Gradient1)"
              strokeDasharray="628.3185307179587 628.3185307179587"
              strokeLinecap="round"
              strokeWidth={60}
            >
              <animate
                attributeName="stroke-dashoffset"
                dur="5s"
                repeatCount="indefinite"
                values="628.3185307179587;0;628.3185307179587"
              />
            </circle>
            <defs>
              <linearGradient
                id="Gradient1"
              >
                <stop
                  className="m78-spin-svg_stop1"
                  offset="0%"
                />
                <stop
                  className="m78-spin-svg_stop2"
                  offset="100%"
                />
              </linearGradient>
            </defs>
          </svg>
        </div>
      </div>
      亥
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __green __small __circle __light __disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <div
        className="m78 m78-spin __small __full"
        style={
          Object {
            "__progress": 0,
            "opacity": 0,
            "pointerEvents": "none",
            "visibility": "hidden",
          }
        }
      >
        <div
          className="m78-spin_inner"
          style={
            Object {
              "top": undefined,
            }
          }
        >
          <svg
            className="m78-spin-svg m78-spin_unit"
            fill="transparent"
            height={200}
            viewBox="0 0 200 200"
            width={200}
          >
            <circle
              className="m78-spin-svg_bg"
              cx={100}
              cy={100}
              r={70}
              strokeWidth={60}
            />
            <circle
              cx={100}
              cy={100}
              r={70}
              stroke="url(#Gradient1)"
              strokeDasharray="628.3185307179587 628.3185307179587"
              strokeLinecap="round"
              strokeWidth={60}
            >
              <animate
                attributeName="stroke-dashoffset"
                dur="5s"
                repeatCount="indefinite"
                values="628.3185307179587;0;628.3185307179587"
              />
            </circle>
            <defs>
              <linearGradient
                id="Gradient1"
              >
                <stop
                  className="m78-spin-svg_stop1"
                  offset="0%"
                />
                <stop
                  className="m78-spin-svg_stop2"
                  offset="100%"
                />
              </linearGradient>
            </defs>
          </svg>
        </div>
      </div>
      卯
    </button>
  </div>
</div>
`;

exports[`button outline 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __outline __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    primary
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __outline __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    red
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __outline __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    green
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __outline __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    yellow
  </button>
</div>
`;

exports[`button size 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __large"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    large
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    default
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __small"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    small
  </button>
  <div
    className="mt-16"
  >
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __large __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      large
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __red __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      default
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __green __small __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      small
    </button>
  </div>
</div>
`;
